Versioning:Defect Fixed #21-Search text wrapping,#38-issue in create module,#41,#42,#43 Project replication Issues

--- a/public/css/css_mindmap/style.css
+++ b/public/css/css_mindmap/style.css
@@ -574,8 +574,9 @@ select
 
 .searchModuleimg-assign, .searchModuleimg-create{
 	position: absolute;
-    margin-left: 46.4%;
+    margin-left: 47.20%;
     top: 3px;
+    background-color: white;
     border-left: 1px solid #ccc;
     padding-left: 3px;
 }
